--- a/src/index.css
+++ b/src/index.css
@@ -7,4 +7,13 @@ body {
     margin: 0;
     padding: 0;
     display: flex;
+
+    width: 100vw;
+    height: 100vh;
+}
+
+#root {
+    display: flex;
+    flex: 1;
+    width: 100%;
 }
